overflow fix

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,9 +6,11 @@
   }
 
 body {
+  overflow-x: hidden;
+  width:100%;
+  height: 100%;
   margin: 0;
   padding: 0;
-  height: 100vh;
   font-family: var(--league-spartan);
 }
 
@@ -191,6 +193,7 @@ body {
 
 
 .background-correction-2 {
+  overflow: hidden;
   z-index: -1;
   background-color: var(--color-blue1);
   position: absolute;
@@ -614,7 +617,6 @@ body {
     }
 }
 
-
 }
 
 @media screen and (max-width:442px) {
@@ -628,10 +630,10 @@ body {
     display: flex;
     justify-content: space-between;
     .logo {
-      font-size: 8px;
+      font-size: 10px;
       .logo-img {
-        width: 20px;
-        height: 20px;
+        width: 30px;
+        height: 30px;
       }
     }
   }
@@ -641,7 +643,7 @@ body {
   transform: skewy(6deg);
   max-width: 100px;
     h1 {
-      font-size: 20px;
+      font-size: 25px;
     color: var(--color-white);
     }
 }
@@ -650,7 +652,8 @@ body {
 .section-main {
     
     .section-main-img {
-      width: 150px;
+      width: 200px;
+      padding-left:20px;
     }
 }
 
